--- a/react-app/package.json
+++ b/react-app/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "classnames": "^2.3.2",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.1",
-    "react-router-dom": "^6.8.2"
+    "react-router-dom": "^6.8.2",
+    "tailwindcss": "^3.2.7"
   }
 }
