--- a/react-app/package.json
+++ b/react-app/package.json
@@ -12,18 +12,21 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "classnames": "^2.3.2",
+    "jest": "^29.5.0",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,6 +49,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.1",
+    "jest-environment-jsdom": "^29.5.0",
     "react-router-dom": "^6.8.2",
     "tailwindcss": "^3.2.7"
   }
